--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,13 +7,9 @@
     <div class="row">
       <div class="col-md-9">
         <h3>ostrio:iron-router-protected demo</h3>
-        <ul>
-          <li><a href="https://github.com/VeliovGroup/Meteor-iron-router-protected">On GitHub</a></li>
-          <li><a href="https://atmospherejs.com/ostrio/iron-router-protected">On Atmosphere</a></li>
-          {{#if currentUser}}
-            <li><button class="btn btn-danger btn-xs" onclick="Meteor.logout()">Log out</button></li>
-          {{/if}}
-        </ul>
+        {{#if currentUser}}
+          <p><button class="btn btn-danger btn-xs" onclick="Meteor.logout()">Log out</button></p>
+        {{/if}}
 
         {{> yield}}
 
@@ -43,6 +39,16 @@
       </div>
     </div>
   </div>
+
+  <hr>
+  <center>
+    <h6>
+      Get this package <a href="https://github.com/VeliovGroup/Meteor-iron-router-protected">on GitHub</a> and/or <a href="https://atmospherejs.com/ostrio/iron-router-protected">on Atmosphere</a>.
+    </h6>
+    <h6>
+      2016. By <a href="https://veliovgroup.com">Veliov Group, LLC</a>
+    </h6>
+  </center>
 </template>
 
 <template name="index">
